kubernetes/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torneo-api-stable
  namespace: torneo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: torneo-api
      track: stable
  template:
    metadata:
      labels:
        app: torneo-api
        track: stable
    spec:
      containers:
        - name: torneo-api
          image: torneo-api:stable
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 15
