kubernetes/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: torneo-api-canary
  namespace: torneo-api
spec:
  selector:
    app: torneo-api
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 8000
