kubernetes/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: torneo-api-stable
  namespace: torneo-api
spec:
  selector:
    app: torneo-api
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 8000
