kubernetes/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torneo-api-canary
  namespace: torneo-api
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: nginx
  rules:
    - host: torneo-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torneo-api-canary
                port:
                  number: 80
