kubernetes/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: torneo-api-stable
  namespace: torneo-api
spec:
  ingressClassName: nginx
  rules:
    - host: torneo-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: torneo-api-stable
                port:
                  number: 80
